fixed overflow of restaurant name in sidebar.

--- a/app/assets/stylesheets/pages/restaurants/sidebar.css.scss
+++ b/app/assets/stylesheets/pages/restaurants/sidebar.css.scss
@@ -57,8 +57,11 @@
           }
 
           span {
+            @include inline-block;
+            @include ellipsis;
             vertical-align: middle;
             margin-left: 5px;
+            width: 135px;
           }
 
           &:hover {
